--- a/doc/manual/R-admin.texi
+++ b/doc/manual/R-admin.texi
@@ -4388,11 +4388,12 @@ Info-ZIP project (@uref{http://www.info-zip.org/}).  All of these tools
 are in @file{Rtools.exe}.
 
 @strong{Beware}: `Native' ports of make are @strong{not} suitable
-(including that at the mingw site).  There were also problems with
-several earlier versions of the cygwin tools and DLLs.  To avoid
-frustration, please use our tool set, and make sure it is at the front
-of your path (including before the Windows system directories).  If you
-are using a Windows shell, type @code{PATH} at the prompt to find out.
+(including that called `MinGW make' at the MinGW SourceForge site).
+There were also problems with several earlier versions of the Cygwin
+tools and DLLs.  To avoid frustration, please use our tool set, and make
+sure it is at the front of your path (including before the Windows
+system directories).  If you are using a Windows shell, type @code{PATH}
+at the prompt to find out.
 
 @node The MinGW compilers, Useful additional programs, The command line tools, The Windows toolset
 @section The MinGW compilers
