subassign with length zero (PR#14217)
git-svn-id: https://svn.r-project.org/R/trunk@51162 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -358,6 +358,10 @@ BUG FIXES
 	of days or longer.  (PR#14208)
 
     o   do_par() UNPROTECTed too early (PR#14214)
+
+    o   subassignment x[[....]] <- y didn't check for a zero-length
+        right hand side, and inserted rubbish value. (PR#14217)
+  
  
 
 
