--- a/doc/THANKS
+++ b/doc/THANKS
@@ -41,7 +41,7 @@ Hubert Palme		<palme@uni-wuppertal.de>
 Roger D. Peng		<rpeng@jhsph.edu>
 Jose' C. Pinheiro	<jose.pinheiro@pharma.novartis.com>
 Tony Plate		<tplate@blackmesacapital.com>
-Anthony Rossini		<rossini@blindglobe.net>
+Anthony Rossini		<blindglobe@gmail.com>
 Jonathan Rougier	<J.C.Rougier@durham.ac.uk>
 Guenther Sawitzki	<gs@statlib.uni-heidelberg.de>
 Marc Schwartz		<marc_schwartz@comcast.net>
