tweak to calculation of non-central pchisq, related to PR#14126
git-svn-id: https://svn.r-project.org/R/trunk@51179 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -279,6 +279,10 @@ NEW FEATURES
     o	cor() and cov() now test for misuse with non-numeric
 	arguments, such as the non-bug report PR#14207.
 
+    o	pchisq(ncp =, log.p = TRUE) is more accurate for probabilities
+	near one.  E.g. pchisq(80, 4, ncp=1, log.p=TRUE).  (Maybe what
+	was meant in PR#14126.)
+
 
 DEPRECATED & DEFUNCT
 
