port 51115 {system.time(), PR#14210} and 51183 {plot.stepfun()}  from trunk
git-svn-id: https://svn.r-project.org/R/branches/R-2-10-branch@51184 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -109,6 +109,9 @@ BUG FIXES
 	parts of complex numbers correctly (and this was used by str():
 	PR#14201).
 
+    o   system.time() had sys.child component wrong (copied user.child
+        instead) on systems with HAVE_GETRUSAGE (PR#14210)
+
     o	Changing both line texture and line cap (end) resulted in the
 	latter to be ommitted form the PDF code. In additon, line cap
 	(end) and join are now set explicitly in PDF output to ensure
@@ -116,6 +119,8 @@ BUG FIXES
 
     o	The suppression of auto-rotation in bitmap() and dev2bitmap()
 	with the 'pdfwrite' device was not working correctly.
+
+    o	plot(ecdf(), log="x") no longer gives a wrong warning.
 
 
 
