Allow unconvertible characters in .R files (but warn about them).
git-svn-id: https://svn.r-project.org/R/trunk@51185 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -308,6 +308,13 @@ INSTALLATION
 	manuals.  This requires LaTeX '2005/12/01' or later.
 
 
+PACKAGE INSTALLATION
+
+    o	Characters in R source which are not translatable to the
+	current locale are now handled more tolerantly:  these will be
+	converted to hex codes with a warning.
+    	
+
 BUG FIXES
 
     o	Using with(), eval() etc with a list with some unnamed
