fisher.test()$pvalue <= 1
git-svn-id: https://svn.r-project.org/R/trunk@51204 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -386,6 +386,9 @@ BUG FIXES
     o   subassignment x[[....]] <- y didn't check for a zero-length
         right hand side, and inserted rubbish value. (PR#14217)
 
+    o	fisher.test() no longer gives a P-value *very* slightly > 1,
+	in some borderline cases.
+
 
 
 
