new mail address for pd
git-svn-id: https://svn.r-project.org/R/trunk@51207 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -8,7 +8,7 @@ source, currently consisting of
 
 Douglas Bates		<bates@stat.wisc.edu>
 John Chambers		<jmc@R-project.org>
-Peter Dalgaard		<p.dalgaard@biostat.ku.dk>
+Peter Dalgaard		<pd.mes@cbs.dk>
 Seth Falcon		<sfalcon@fhcrc.org>
 Robert Gentleman	<rgentlem@fhcrc.org>
 Kurt Hornik		<Kurt.Hornik@wu-wien.ac.at>
