--- a/NEWS
+++ b/NEWS
@@ -283,6 +283,9 @@ NEW FEATURES
 	near one.  E.g. pchisq(80, 4, ncp=1, log.p=TRUE).  (Maybe what
 	was meant in PR#14126.)
 
+    o	sample() and sample.int() allow zero items to be sampled from
+	a zero-length input.
+
 
 DEPRECATED & DEFUNCT
 
