update some emails
git-svn-id: https://svn.r-project.org/R/trunk@51210 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/AUTHORS
+++ b/doc/AUTHORS
@@ -9,19 +9,19 @@ source, currently consisting of
 Douglas Bates		<bates@stat.wisc.edu>
 John Chambers		<jmc@R-project.org>
 Peter Dalgaard		<pd.mes@cbs.dk>
-Seth Falcon		<sfalcon@fhcrc.org>
-Robert Gentleman	<rgentlem@fhcrc.org>
-Kurt Hornik		<Kurt.Hornik@wu-wien.ac.at>
+Seth Falcon		<seth@userprimary.net>
+Robert Gentleman	<rgentlem@gene.com>
+Kurt Hornik		<Kurt.Hornik@wu.ac.at>
 Stefano Iacus		<stefano.iacus@unimi.it>
 Ross Ihaka		<ihaka@stat.auckland.ac.nz>
-Friedrich Leisch	<Friedrich.Leisch@tuwien.ac.at>
+Friedrich Leisch	<friedrich.leisch@stat.uni-muenchen.de>
 Thomas Lumley		<tlumley@u.washington.edu>
 Martin Maechler		<maechler@stat.math.ethz.ch>
 Duncan Murdoch		<murdoch@stats.uwo.ca>
 Paul Murrell		<paul@stat.auckland.ac.nz>
 Martyn Plummer		<plummer@iarc.fr>
 Brian Ripley		<ripley@stats.ox.ac.uk>
-Deepayan Sarkar		<deepayan@stat.wisc.edu>
+Deepayan Sarkar		<deepayan.sarkar@gmail.com>
 Duncan Temple Lang	<duncan@wald.ucdavis.edu>
 Luke Tierney		<luke@stat.uiowa.edu>
 Simon Urbanek		<urbanek@research.att.com>
