next round of tweaks to sample
git-svn-id: https://svn.r-project.org/R/trunk@51211 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -284,7 +284,8 @@ NEW FEATURES
 	was meant in PR#14126.)
 
     o	sample() and sample.int() allow zero items to be sampled from
-	a zero-length input.
+	a zero-length input.  sample.int() gains a default value
+	'size=n' to be more similar to sample().
 
 
 DEPRECATED & DEFUNCT
