maintainer() convenience function
git-svn-id: https://svn.r-project.org/R/trunk@51225 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/NEWS
+++ b/NEWS
@@ -282,6 +282,10 @@ NEW FEATURES
     o	pchisq(ncp =, log.p = TRUE) is more accurate for probabilities
 	near one.  E.g. pchisq(80, 4, ncp=1, log.p=TRUE).  (Maybe what
 	was meant in PR#14126.)
+	
+    o	maintainer() has been added, to give convenient access to the
+	name of the maintainer of a package (contributed by David
+	Scott).
 
     o	sample() and sample.int() allow zero items to be sampled from
 	a zero-length input.  sample.int() gains a default value
